# photo-service

./: .env  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  specification.yaml
.github/workflows/: codeql.yml  deploy_webserver.yml  test.yml
event_service/: app.py  gunicorn_config.py
event_service/adapters/: __init__.py  adapter.py  competition_formats_adapter.py  contestants_adapter.py  event_format_adapter.py  events_adapter.py  raceclasses_adapter.py  users_adapter.py
event_service/commands/: __init__.py  contestants_commands.py  events_commands.py
event_service/models/: __init__.py  competition_format_model.py  contestant_model.py  event_model.py  raceclass_model.py
event_service/services/: __init__.py  competition_formats_service.py  contestants_service.py  event_format_service.py  events_service.py  exceptions.py  raceclasses_service.py
event_service/views/: __init__.py  competition_formats.py  contestants.py  contestants_commands.py  event_format.py  events.py  events_commands.py  raceclasses.py
photo_service/: app.py  gunicorn_config.py
photo_service/adapters/: __init__.py  adapter.py  albums_adapter.py  config_adapter.py  photos_adapter.py  status_adapter.py  users_adapter.py  video_events_adapter.py
photo_service/models/: __init__.py  album_model.py  changelog.py  config_model.py  photo_model.py  status_model.py  video_event_model.py
photo_service/services/: __init__.py  albums_service.py  azure_servicebus_service.py  config_service.py  exceptions.py  google_photos_service.py  photos_service.py  status_service.py
photo_service/utils/: __init__.py  db_utils.py  jwt_utils.py
photo_service/views/: __init__.py  albums.py  config.py  g_photos.py  liveness.py  photos.py  status.py  unit_test.py  video_events.py
scripts/: README.md  load_competition_formats.py
scripts/files/: competition_formats.json
tests/: conftest.py
tests/contract/: test_albums.py  test_assign_bibs.py  test_competition_formats.py  test_config.py  test_contestants.py  test_event_format.py  test_events.py  test_generate_raceclasses_on_event.py  test_photos.py  test_ping.py  test_raceclasses.py  test_ready.py  test_status.py
tests/files/: album.json  contestants_G11.csv  event.json  g_mediaitem.json  photo.json
tests/integration/: __init__.py  test_albums.py  test_assign_bibs_to_contestants.py  test_competition_formats.py  test_config.py  test_contestants.py  test_event_format.py  test_events.py  test_g_photos.py  test_generate_racelasses_on_event.py  test_photos.py  test_raceclasses.py  test_ready.py  test_status.py  test_video_events.py
tests/unit/: test_photo_service.py
